--- a/desafio-1.ipynb
+++ b/desafio-1.ipynb
@@ -23,7 +23,7 @@
    "id": "6caa3cfe",
    "metadata": {},
    "source": [
-    "Perfis encontrados\n",
+    "## Perfis encontrados\n",
     "\n",
     "Com base na análise bivariada entre variáveis demográficas e o resultado do questionário DPQ. Foi possível elaborar um perfil com maior incidência de sintomas de depressão: sexo feminino, entre 50 e 59 anos, negra não-hispânica, que estudou até o 12° ano e que possui renda entre 5000 e 9999 dólares.\n",
     "\n",
